[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
    
[project]
name = "pymaidol"
description = "A markup gramma that embed python code into text"
readme = "README.md"
keywords= ["Prompt", "Markup Language", "NLP", "AI", "GPT"]
requires-python = ">=3.6"
version = "0.1.0"
authors = [
    { name="Eterance"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]